--- a/FoldingVideoPlusTrivia/app/src/main/res/xml/activity_main_scene.xml
+++ b/FoldingVideoPlusTrivia/app/src/main/res/xml/activity_main_scene.xml
@@ -5,22 +5,7 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/shrunk_constraints">
-        <!--        <Constraint-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            motion:layout_constraintBottom_toBottomOf="@id/player_view"-->
-        <!--            motion:layout_constraintEnd_toStartOf="@id/triviaEnableButton"-->
-        <!--            motion:layout_constraintStart_toStartOf="@id/player_view"-->
-        <!--            android:id="@id/player_control_view" />-->
-        <!--        <Constraint-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            motion:layout_constraintBottom_toBottomOf="@id/player_view"-->
-        <!--            motion:layout_constraintEnd_toEndOf="@id/player_view"-->
-        <!--            motion:layout_constraintStart_toEndOf="@id/player_control_view"-->
-        <!--            android:id="@id/triviaEnableButton" />-->
-    </ConstraintSet>
+    <ConstraintSet android:id="@+id/shrunk_constraints"></ConstraintSet>
     <ConstraintSet android:id="@+id/fullscreen_constraints" />
 
     <ConstraintSet android:id="@+id/shrunk_constraints_dual_land">
@@ -46,6 +31,29 @@
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toEndOf="@id/player_control_view" />
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/fullscreen_constraints_large_screen">
+        <Constraint
+            android:id="@id/player_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
+<!--        <Constraint-->
+<!--            android:id="@id/bottom_trivia_view"-->
+<!--            motion:layout_constraintBottom_toTopOf="@id/player_control_view"-->
+<!--            motion:layout_constraintEnd_toStartOf="@+id/horizontal_guide"-->
+<!--            motion:layout_constraintStart_toStartOf="parent"-->
+<!--            motion:layout_constraintTop_toBottomOf="@+id/vertical_guide" />-->
+        <Constraint
+            android:id="@id/end_trivia_view"
+            motion:layout_constraintBottom_toTopOf="@id/player_control_view"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toEndOf="@+id/horizontal_guide"
+            motion:layout_constraintTop_toTopOf="parent"/>
     </ConstraintSet>
 
 </MotionScene>
